# FairMTSP

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/data/: A-n34-k5.vrp  A-n36-k5.vrp  A-n38-k5.vrp  A-n39-k5.vrp  A-n44-k6.vrp  A-n45-k7.vrp  A-n46-k7.vrp  A-n48-k7.vrp  E-n13-k4.vrp  E-n22-k4.vrp  E-n23-k3.vrp  E-n30-k3.vrp  bays29.tsp  burma14.tsp  seattle.tsp
app/data/A/: A-n32-k5.vrp  A-n33-k5.vrp  A-n33-k6.vrp  A-n37-k5.vrp  A-n37-k6.vrp  A-n39-k6.vrp  A-n45-k6.vrp
app/data/E/: E-n31-k7.vrp  E-n33-k4.vrp  E-n51-k5.vrp
app/src/main/kotlin/FairMTSP/: App.kt
app/src/main/postProcessing/: pyproject.toml
app/src/main/postProcessing/postprocessing/: _runs.txt  create_seattle.py  delta-fair_runs.txt  eps-fair_runs.txt  main.py  min-max_runs.txt  min_runs.txt  osmnxGraph.ipynb  p-norm_runs.txt  plot_COF.py  plot_pareto_COF.py  plot_seattle.py  postProcess.ipynb  script_generator.py  seattle.json
app/src/main/postProcessing/runGenerator/: script_generator.py
app/src/main/resources/: log4j2.xml  simplelogger.properties
readResults/: pyproject.toml  queries.py  update_db.py
results/: ParetoFront_plotdata.csv  coeffVariation.csv  delta-fair.csv  eps-fair.csv  minmaxFair_final.csv  p-norm.csv  results.db
results/round/: COF_plotdata.csv  coeffVariation.csv  eps-fair.csv  minmaxFair.csv  p-norm.csv  pNormFair.csv
results/round-2/: coeffVariation.csv  delta-fair-tsp.csv  delta-fair-vrp.csv  eps-fair-tsp.csv  eps-fair-vrp.csv  minmaxFair_final.csv  p-norm-tsp.csv  p-norm-vrp.csv  results.db  runtime_stats.csv
(+12 files in other folders)
