[tool.poetry]
name = "readresults"
version = "0.1.0"
description = "read results"
authors = ["abhay1220 <abhay010123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
